--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     >
 
-    <title>Minimal React Webpack build</title>
+    <title>Oughts and Crosses</title>
   </head>
 
   <body>
