added night theme

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Oughts and Crosses</title>
   </head>
 
-  <body>
+  <body class="night-theme">
     <div id="root"></div>
   </body>
 </html>
